environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danify-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - danify.cz
        - www.danify.cz
      secretName: danify-landing-tls
    - hosts:
        - app.danify.cz
      secretName: danify-fe-tls
  rules:
    - host: danify.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danify-landing
                port:
                  number: 80
    - host: www.danify.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danify-landing
                port:
                  number: 80
    - host: app.danify.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danify-fe
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danify-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.danify.cz
      secretName: danify-api-tls
  rules:
    - host: api.danify.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danify-api
                port:
                  number: 3000
